fixed table alignment issue

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -164,7 +164,7 @@ h1 {
 }
 
 .app-preview-box{
-	min-height: 10rem;
+	min-height: 40rem;
 }
 
 
